# tcglense-cli

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
scripts/: api-endpoints.txt  check-api-drift.sh  release.sh
src/: cli.rs  client.rs  config.rs  main.rs  models.rs  output.rs  update.rs  weblogin.rs
src/commands/: auth.rs  catalog.rs  collection.rs  decks.rs  holdings.rs  misc.rs  mod.rs  public.rs  wishlist.rs
src/tui/: mod.rs  ui.rs
